--- a/Resources/Private/Templates/Schedule/CurrentOpenRange.html
+++ b/Resources/Private/Templates/Schedule/CurrentOpenRange.html
@@ -5,13 +5,21 @@
 <f:layout name="Default"/>
 
 <f:section name="content">
-    <f:if condition="{range}">
+
+    <f:if condition="{openingHours.activeOverride}">
         <f:then>
-            We're open since {rangeStart} o'clock. We'll will close at {rangeEnd} o'clock.
+            {openingHours.override.text}
         </f:then>
         <f:else>
-            We're closed since {previousClose -> f:format.date(format: 'l H:i')} o'clock,
-            We will re-open at {nextOpen -> f:format.date(format: 'l H:i')} o'clock.
+            <f:if condition="{range}">
+                <f:then>
+                    We're open since {rangeStart} o'clock. We'll will close at {rangeEnd} o'clock.
+                </f:then>
+                <f:else>
+                    We're closed since {openingHours.previousClose -> f:format.date(format: 'l H:i')} o'clock,
+                    We will re-open at {openingHours.nextOpen -> f:format.date(format: 'l H:i')} o'clock.
+                </f:else>
+            </f:if>
         </f:else>
     </f:if>
 </f:section>
