--- a/Resources/Private/Partials/Schedule/Table/Full.html
+++ b/Resources/Private/Partials/Schedule/Table/Full.html
@@ -2,8 +2,8 @@
       data-namespace-typo3-fluid="true"
 >
 
-<table class="table">
-    <f:for each="{schedule}"
+<table class="table table-striped">
+    <f:for each="{weekPlan}"
            as="openingTimes"
            key="weekday"
     >
