--- a/Resources/Private/Templates/Schedule/Exceptions.html
+++ b/Resources/Private/Templates/Schedule/Exceptions.html
@@ -5,7 +5,7 @@
 <f:layout name="Default"/>
 
 <f:section name="content">
-    <table class="table">
+    <table>
         <f:for each="{exceptions}" as="exception" key="date">
             <tr>
                 <td>
